Fixed 'Appearance' collapsible tab alignment. Removed auto-scroll into sidebar item on canvas shape click.

--- a/cvat-ui/src/components/annotation-page/standard-workspace/objects-side-bar/styles.scss
+++ b/cvat-ui/src/components/annotation-page/standard-workspace/objects-side-bar/styles.scss
@@ -7,7 +7,7 @@
 .cvat-objects-appearance-collapse.ant-collapse {
     width: 100%;
     bottom: 0;
-    position: absolute;
+    position: relative;
     border-radius: 0;
 
     > .ant-collapse-item {
